# jira-rs

./: .gitignore  Cargo.toml
.vim/: coc-settings.json
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
cli/src/cli/: root.rs
cli/src/cli/issues/: get.rs  meta.rs  mod.rs
crates/cli/src/: main.rs
crates/cli/src/cli/: mod.rs
crates/cli/src/cli/issues/: create.rs  search.rs
crates/libjira/: Cargo.toml
crates/libjira/src/: client.rs  issue.rs
crates/libjira/src/models/: empty.rs  mod.rs
crates/libjira/src/models/issue/: create.rs  issue.rs
crates/libjira/src/options/: cdelim.rs  mod.rs
crates/libjira/src/options/issue/: create.rs  get.rs  metadata.rs  mod.rs  search.rs
docs/: README.md  error.json  features.md
libjira/: Cargo.toml
libjira/src/: client.rs  error.rs  issue.rs  lib.rs
libjira/src/models/: cow.rs  empty.rs  issue.rs  mod.rs  smol_cow.rs
libjira/src/models/issue/: common.rs  create.rs  issue.rs  metadata.rs  mod.rs  search.rs
libjira/src/options/: cdelim.rs  issue.rs  mod.rs
libjira/src/options/issue/: create.rs  get.rs  metadata.rs  mod.rs  search.rs
src/: client.rs  error.rs  issue.rs  lib.rs
src/models/: issue.rs
src/options/: mod.rs  opt_issues.rs
