[package]
name = "jira-rs"
version = "0.1.0"
authors = ["Bazaah <github@luxolus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
url = "2.1"
serde_json = { version = "1.0", features = ["raw_value"] }
serde = { version = "1.0", features = ['derive'] }
thiserror = "1.0"
