[package]
name = "jira-rs"
version = "0.3.2"
authors = ["Bazaah <github@luxolus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
url = "2.1"
itoa = "0.4"
serde_json = { version = "1.0", features = ["raw_value"] }
serde = { version = "1.0", features = ['derive'] }
thiserror = "1.0"
ouroboros = "0.5"
smol_str = "0.1"
jsonp = "1.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
serde_test = "1.0"
